--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
     <head>
+        <script type="text/javascript" src="settings.js"></script>
+        <script type="text/javascript" src="reciever.js"></script>
         <script type="text/javascript" src="particle.js"></script>
         <script type="text/javascript" src="particlesProcessor.js"></script>
         <link rel="stylesheet" href="main.css">
@@ -12,8 +14,8 @@
         <div id="reverb-container" class="reverb-container">
             <canvas id='main-canvas'></canvas>
         </div>
-        <div>
-            <p>Click on the area above to start reverberation process. Click again to stop.</p>
+        <div class="info-block">
+            <p>Click on the area above to start/stop reverberation process.</p>
             <p>Several particles moving in random direction will be spawned.</p>
             <p>Particles will be affected by the edges of the area to demonstrate fading process.</p>
         </div>
